2010-04-21  Shu Chang  <chang.shu@nokia.com>

Reviewed by Simon Hausmann.

        [Qt] Fix Symbian build where QT_NO_SYSTEMTRAYICON is defined.
        https://bugs.webkit.org/show_bug.cgi?id=37442

        * WebCoreSupport/NotificationPresenterClientQt.cpp:
        (NotificationPresenterClientQt::show):
        * WebCoreSupport/NotificationPresenterClientQt.h:

Canonical link: https://commits.webkit.org/49253@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57972 268f45cc-cd09-0410-ab3c-d52691b4dbfc