WebKit/qt/WebCoreSupport/NotificationPresenterClientQt.h
@@ -52,7 +52,9 @@ public:
     virtual NotificationPresenter::Permission checkPermission(const KURL&);
 
 private: 
+#ifndef QT_NO_SYSTEMTRAYICON
     QSystemTrayIcon m_tray;
+#endif
 };
 }
 
